# Rusty-keyboard

./: Cargo.toml  ReadMe.md
embedded/: Cargo.toml  Embed.toml  README.md  build.rs  flash.sh  launch.json  memory.x  pico-debug-20221128.uf2 copy
embedded/.cargo/: config.toml
embedded/src/: main.rs
rmk_rp2040/: Readme.md
rmk_rp2040/mad_mod_labs/ANSI Keyboard Files/: ANSIKeyboardFirmware.hex
rmk_rp2040/use_config/: Cargo.toml  keyboard.toml  vial.json
web/: .gitignore  Cargo.toml  README.md  tailwind.css
web/assets/: tailwind.css
web/src/: constants.rs  main.rs
web/src/json/: schema.rs
web/src/json/layouts/: ansi_60.json  ansi_65.json  ansi_75.json  ansi_full_size.json  ansi_tkl.json
web/src/key_layouts/: mod.rs
web/src/key_layouts/qwerty/ANSI/: full_size.rs  seven_five.rs  six_five.rs  sixty.rs  tkl.rs
web/src/key_layouts/qwerty/split/: mod.rs
web/src/layouts/: colemak.rs  dvorak.rs  qwerty.rs
web/src/views/: layout.rs  mod.rs
web/src/views/components/: click_sound.rs  footer.rs  keys.rs  mod.rs  navbar.rs
web/src/views/configure/: compile.rs  mod.rs  pins.rs
web/src/views/firmware/: compile.rs  firmware.rs  mod.rs  pins.rs  tabs.rs  wiring.rs
web/src/views/main_page/: assumptions.rs  home.rs  json.rs  key_options.rs  key_summary.rs  layout_editor.rs  mod.rs  properties.rs  tabs.rs
web/src/views/presets/: list.rs  mod.rs  preset.rs  preview.rs
