[package]
name = "embedded"
version = "0.1.0"
edition = "2024"


[[bin]]
name = "embedded"
test = false
bench = false

[dependencies]
cortex-m-rt = "0.7.5"
panic-halt = "1.0.0"

# architecture, Vendor, environment
#ISA Support = Instruction Set Architecture Support
# EABI = Embedded Application Binary Interface
