[package]
name = "embedded"
version = "0.1.0"
edition = "2024"


[[bin]]
name = "embedded"
test = false
bench = false

[dependencies]
cortex-m-rt = "0.7.5"
embassy-executor = { version = "0.9.1", features = ["defmt", "arch-cortex-m", "executor-thread"] }
embassy-time = { version = "0.5.0", features = ["defmt"] }
embassy-nrf = { version = "0.7.0", features = ["defmt", "nrf52840", "time-driver-rtc1", "gpiote"] }

defmt = "1.0.1"
defmt-rtt = "1.0.0"

cortex-m = { version = "0.7.6", features = ["critical-section-single-core"] }
panic-probe = { version = "1.0.0", features = ["print-defmt"] }






# architecture, Vendor, environment
#ISA Support = Instruction Set Architecture Support
# EABI = Embedded Application Binary Interface
