[package]
name = "embedded"
version = "0.1.0"
edition = "2024"


[[bin]]
name = "embedded"
test = false
bench = false

[dependencies]
cortex-m-rt = "0.7.5"
rp-pico = "0.9.0"
panic-halt = "1.0.0"
embedded-hal = "1.0.0"
#critical-section = { version = "1.2.0", default-features = false, features = ["restore-state-none"] }

# embassy-executor = { version = "0.9.1", features = ["defmt", "arch-cortex-m", "executor-thread"] }
# embassy-time = { version = "0.5.0", features = ["defmt"] }
# embassy-nrf = { version = "0.7.0", features = ["defmt", "nrf52840", "time-driver-rtc1", "gpiote"] }

defmt = "1.0.1"
defmt-rtt = "1.0.0"

cortex-m = { version = "0.7.6"}
panic-probe = { version = "1.0.0", features = ["print-defmt"] }


# Make sure you have something like this for memory layout
# [dependencies.rp-pico]
# version = "0.9.0"
# features = ["rt", "critical-section-impl"]



# architecture, Vendor, environment
#ISA Support = Instruction Set Architecture Support
# EABI = Embedded Application Binary Interface
