[package]
name = "web"
version = "0.1.0"
authors = ["RayburnCode <rayburncode@gmail.com>"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
dioxus = { version = "0.6.0", features = ["router"] }
serde_json = "1.0.142"
chrono = "0.4.41"
nanoid = "0.4.0"
getrandom = { version = "0.2", features = ["js"] }
log = "0.4.27"

[features]
default = ["web"]
web = ["dioxus/web"]
desktop = ["dioxus/desktop"]
mobile = ["dioxus/mobile"]

[profile]

[profile.wasm-dev]
inherits = "dev"
opt-level = 1

[profile.server-dev]
inherits = "dev"

[profile.android-dev]
inherits = "dev"
